--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -76,6 +76,18 @@
     background: linear-gradient(#d8e386, #150911);
 }
 
+#Korosensei {
+    background: linear-gradient(#E5E632, #150911);
+}
+
+#Hisoka {
+    background: linear-gradient(#0A0235, #150911);
+}
+
+#Saitama {
+    background: linear-gradient(black, #150911);
+}
+
 #Gojo {
     background: linear-gradient(#dce8a3, #090a15);
 }
