--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -13,38 +13,80 @@
 
 html {
     font-size: 14px;
-    @media (max-width: 1600px) {
+}
+
+@media (max-width: 1600px) {
+    html{
         font-size: 80%;
     }
-
-    @media (max-width: 1400px) {
-        font-size: 70%;
-    }
-
-    @media (max-width: 1200px) {
-        font-size: 60%;
-    }
-
-    @media (max-width: 1000px) {
-        font-size: 50%;
-    }
-
-    @media (max-width: 800px) {
-        font-size: 40%;
-    }
-
-    @media (max-width: 650px) {
-        font-size: 35%;
-    }
-
-    @media (max-width: 500px) {
-        font-size: 30%;
-    }
-
-    @media (max-width: 450px) {
-        font-size: 25%;
+    .cards-page {
+        zoom: 1;
     }
 }
+
+@media (max-width: 1400px) {
+    html{
+        font-size: 70%;
+    }
+    .cards-page {
+        zoom: 1.1;
+    }
+}
+
+@media (max-width: 1200px) {
+    html{
+        font-size: 60%;
+    }
+    .cards-page {
+        zoom: 1.2;
+    }
+}
+
+@media (max-width: 1000px) {
+    html {
+        font-size: 50%;
+    }
+    .cards-page {
+        zoom: 1.3;
+    }
+}
+
+@media (max-width: 800px) {
+    html {
+        font-size: 40%;
+    }
+    .cards-page {
+        zoom: 1.4;
+    }
+}
+
+@media (max-width: 650px) {
+    html {
+        font-size: 35%;
+    }
+    .cards-page {
+        zoom: 1.4;
+    }
+}
+
+@media (max-width: 500px) {
+    html {
+        font-size: 30%;
+    }
+    .cards-page {
+        zoom: 1.5;
+    }
+}
+
+@media (max-width: 450px) {
+    html {
+        font-size: 25%;
+    }
+    .cards-page {
+        zoom: 1.5;
+    }
+}
+
 
 body {
     height: 100vh;
