--- a/src/styles/Level.css
+++ b/src/styles/Level.css
@@ -18,14 +18,12 @@
 }
 
 .level-control-container {
-    flex: 0.8;
     display: flex;
     justify-content: center;
 }
 
 .level-control {
     height: 100%;
-    width: 30%;
     border-radius: 10px 10px 0 0;
     border: 2px solid black;
     display: grid;
@@ -39,7 +37,7 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    border: 1px solid black;
+    padding: 1rem;
 }
 
 .level-control .ability-wrapper:hover {
@@ -47,10 +45,12 @@
     transform: scale(0.9);
 }
 
-.ability {
-    padding: 1rem;
+.damage-ability {
+    border-right: 1px solid black;
 }
-
+.special-ability {
+    border-left: 1px solid black;
+}
 .ability-wrapper {
     width: 100%;
     height: 100%;
@@ -58,6 +58,7 @@
     align-items: center;
     flex-direction: column;
     gap: 0.5rem;
+    border: none;
 }
 
 .ability-title {
@@ -77,11 +78,7 @@
 .ally-side, .enemy-side {
     flex: 1;
     display: flex;
-    align-items: center;
-}
-
-.ally-side.ally-side {
-    border-right: 0.25rem dashed black;
+    /* align-items: center; */
 }
 
 .level-card-wrapper {
