--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -40,6 +40,9 @@ html {
     .cards-page {
         zoom: 1.2;
     }
+    .level {
+        zoom: 0.7;
+    }
 }
 
 @media (max-width: 1000px) {
@@ -48,6 +51,9 @@ html {
     }
     .cards-page {
         zoom: 1.3;
+    }
+    .level {
+        zoom: 0.8;
     }
 }
 
@@ -58,6 +64,9 @@ html {
     .cards-page {
         zoom: 1.4;
     }
+    .level {
+        zoom: 0.9;
+    }
 }
 
 @media (max-width: 650px) {
@@ -66,6 +75,9 @@ html {
     }
     .cards-page {
         zoom: 1.4;
+    }
+    .level {
+        zoom: 1;
     }
 }
 
@@ -76,6 +88,9 @@ html {
     .cards-page {
         zoom: 1.5;
     }
+    .level {
+        zoom: 1.2;
+    }
 }
 
 @media (max-width: 450px) {
@@ -83,6 +98,9 @@ html {
         font-size: 25%;
     }
     .cards-page {
+        zoom: 1.5;
+    }
+    .level {
         zoom: 1.5;
     }
 }
