--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -24,6 +24,11 @@ html {
     }
 }
 
+html, body {
+    height: 100%;
+    width: 100%;
+}
+
 @media (max-width: 1400px) {
     html{
         font-size: 70%;
