--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -49,6 +49,12 @@ html {
     .level {
         zoom: 0.7;
     }
+    .level-title{
+        font-size: 2.8rem;
+    }
+    .level-caption, .page-footer p{
+        font-size: 1.2rem;
+    }
 }
 
 @media (max-width: 1000px) {
@@ -66,6 +72,12 @@ html {
     }
     .level {
         zoom: 0.8;
+    }
+    .level-title{
+        font-size: 3rem;
+    }
+    .level-caption, .page-footer p{
+        font-size: 1.4rem;
     }
 }
 
@@ -85,6 +97,12 @@ html {
     .level {
         zoom: 0.9;
     }
+    .level-title{
+        font-size: 3.2rem;
+    }
+    .level-caption, .page-footer p{
+        font-size: 1.6rem;
+    }
 }
 
 @media (max-width: 650px) {
@@ -102,6 +120,12 @@ html {
     }
     .level {
         zoom: 1;
+    }
+    .level-title{
+        font-size: 3.6rem;   
+    }
+    .level-caption, .page-footer p{
+        font-size: 1.8rem;
     }
 }
 
@@ -121,6 +145,12 @@ html {
     .level {
         zoom: 1.2;
     }
+    .level-title{
+        font-size: 4rem;
+    }
+    .level-caption, .page-footer p{
+        font-size: 2rem;
+    }
 }
 
 @media (max-width: 450px) {
@@ -138,6 +168,12 @@ html {
     }
     .level {
         zoom: 1.5;
+    }
+    .level-title{
+        font-size: 4rem;
+    }
+    .level-caption, .page-footer p{
+        font-size: 2rem;
     }
 }
 
