--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -22,6 +22,12 @@ html {
     .cards-page {
         zoom: 1;
     }
+    .level-caption{
+        font-size: 1rem;
+    }
+    .page-footer p{
+        font-size: 1rem;
+    }
 }
 
 @media (max-width: 1400px) {
@@ -30,6 +36,12 @@ html {
     }
     .cards-page {
         zoom: 1.1;
+    }
+    .level-caption{
+        font-size: 1rem;
+    }
+    .page-footer p{
+        font-size: 1rem;
     }
 }
 
@@ -52,8 +64,11 @@ html {
     .level-title{
         font-size: 2.8rem;
     }
-    .level-caption, .page-footer p{
+    .level-caption{
         font-size: 1.2rem;
+    }
+    .page-footer p{
+        font-size: 1rem;
     }
 }
 
@@ -76,8 +91,11 @@ html {
     .level-title{
         font-size: 3rem;
     }
-    .level-caption, .page-footer p{
+    .level-caption{
         font-size: 1.4rem;
+    }
+    .page-footer p{
+        font-size: 1.1rem;
     }
 }
 
@@ -100,8 +118,11 @@ html {
     .level-title{
         font-size: 3.2rem;
     }
-    .level-caption, .page-footer p{
+    .level-caption{
         font-size: 1.6rem;
+    }
+    .page-footer p{
+        font-size: 1.2rem;
     }
 }
 
@@ -124,8 +145,11 @@ html {
     .level-title{
         font-size: 3.6rem;   
     }
-    .level-caption, .page-footer p{
+    .level-caption{
         font-size: 1.8rem;
+    }
+    .page-footer p{
+        font-size: 1.4rem;
     }
 }
 
@@ -148,8 +172,11 @@ html {
     .level-title{
         font-size: 4rem;
     }
-    .level-caption, .page-footer p{
+    .level-caption{
         font-size: 2rem;
+    }
+    .page-footer p{
+        font-size: 1.5rem;
     }
 }
 
@@ -172,8 +199,11 @@ html {
     .level-title{
         font-size: 4rem;
     }
-    .level-caption, .page-footer p{
+    .level-caption{
         font-size: 2rem;
+    }
+    .page-footer p{
+        font-size: 1.5rem;
     }
 }
 
