fix level caption size 2

--- a/src/styles/LevelsPage.css
+++ b/src/styles/LevelsPage.css
@@ -45,6 +45,7 @@
 .level-caption {
     font-weight: 100;
     font-style: italic;
+    font-size: 0.75rem;
 }
 .level-button:hover {
     /* transform: scale(0.9); */
