--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 .homepage-main {
-    background-image: url('/images/lofigirl-background.png');
+    background-image: url('/images/lofigirl-background.webp');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
